重新生成了三层代码，改了字段类型全部为字符型，总算挽救了代码，差点崩溃。

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -119,7 +119,7 @@
       <Name>System.Data</Name>
     </Reference>
     <Reference Include="System.Data.SQLite">
-      <HintPath>..\DBUtility\bin\Debug\System.Data.SQLite.DLL</HintPath>
+      <HintPath>..\..\..\MaterialCodeGenerator\MaterialCodeGenerator\Lib\System.Data.SQLite.DLL</HintPath>
     </Reference>
     <Reference Include="System.Web.Services">
       <Name>System.Web.Services</Name>
