--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ElecFlowNoGenerator.cs" />
     <Compile Include="IFlowNoGenerator.cs" />
     <Compile Include="LevelSearchor.cs" />
     <Compile Include="MainForm.cs">
@@ -63,6 +64,9 @@
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MainForm.ElecPage.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.StdPage.cs">
       <SubType>Form</SubType>
