--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -72,9 +72,13 @@
     <Compile Include="MainForm.LinePage.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="MainForm.MetalPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MainForm.StdPage.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="MetalFlowNoGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StdFlowNoGenerator.cs" />
