--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -56,10 +56,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssistantFlowNoGenerator.cs" />
+    <Compile Include="ContractFlowNoGenerator.cs" />
     <Compile Include="ElecFlowNoGenerator.cs" />
     <Compile Include="IFlowNoGenerator.cs" />
     <Compile Include="LevelSearchor.cs" />
     <Compile Include="LineFlowNoGenerator.cs" />
+    <Compile Include="MainForm.AssistantPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForm.ContractPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
