--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -83,10 +83,14 @@
     <Compile Include="MainForm.MetalPage.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="MainForm.MlinePage.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MainForm.StdPage.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MetalFlowNoGenerator.cs" />
+    <Compile Include="MlineFlowNoGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StdFlowNoGenerator.cs" />
