若干问题修复、反查功能实现

--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -97,6 +97,8 @@
     <Compile Include="ProductionFlowNoGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Searchors\ICodeReverser.cs" />
+    <Compile Include="Searchors\RawSeachor.cs" />
     <Compile Include="StdFlowNoGenerator.cs" />
     <Compile Include="Test.cs">
       <SubType>Form</SubType>
@@ -135,6 +137,7 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
